# AD_Report

./: README.md  app.py  pyproject.toml  requirements.txt
config/: config_example.yaml
modules/: connect_ad.py  create_files.py  event_logs.py  extract_data.py
